gitops/apps/dollardollar/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dollardollar-deployment
  labels:
    app: dollardollar
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: dollardollar
  template:
    metadata:
      labels:
        app: dollardollar
    spec:
      containers:
        - name: dollardollar
          image: harung43/dollardollar:v4.4
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
