gitops/apps/dollardollar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dollardollar
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    app: dollardollar
