gitops/apps/dollardollar/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dollardollar
  labels:
    probe: enabled
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - "money.bealv.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dollardollar
          port: 5001
